--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
-    <title>React App</title>
+    <title>Federico Reina - Página personal</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
